# CrystalFp

./: AnalysisMethod.cpp  AnalysisMethod.h  AtomSymbols.cpp  AtomSymbols.h  CMakeLists.txt  CmdLine.cpp  CmdLine.h  CrystalFp.cpp  CrystalFp.h  CrystalFpAnalysis.cpp  CrystalFpAnalysis.h  CrystalFpExceptions.h  CrystalFpScatterplot.cpp  CrystalFpScatterplot.h  DistanceMatrix.h  DistanceMethod.cpp  DistanceMethod.h  Doxyfile  Doxyfile_dev  FingerprintingMethod.cpp  FingerprintingMethod.h  GroupingMethod.cpp  GroupingMethod.h  MethodsList.h  ReadPoscar.cpp  ReadPoscar.h  ResultsCache.cpp  ResultsCache.h  SmoothPeak.cpp  SmoothPeak.h  Structure.cpp  Structure.h  StructureList.cpp  StructureList.h  cfp.cpp  cfp.supp  documentation.h
simpleopt/: SimpleGlob.h  SimpleOpt.dsw  SimpleOpt.h  SimpleOpt.sln  basicSample.dsp  basicSample.vcproj  fullSample.dsp  fullSample.vcproj  globSample.dsp  globSample.vcproj  package.cmd  runtests.cmd  runtests.win.txt  simpleopt.doxy
